[package]
name = "day11_1"
version = "0.1.0"
authors = ["David Schultz <davids24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { git = "https://github.com/rust-itertools/itertools" }
tokio = { version = "0.2.4", features = ["full"] }
tokio-test = "0.2.0"
futures  = "0.3.0"
